RESOLVED FIXED 245605
[macOS] RunningBoard assertions regress page load time
https://bugs.webkit.org/show_bug.cgi?id=245605
Summary [macOS] RunningBoard assertions regress page load time
Miguel Salinas
Reported 2022-09-23 15:21:33 PDT
We're observing a page load time regression after merging https://github.com/WebKit/WebKit/pull/4190. We should revert while we address this issue.
Attachments
Miguel Salinas
Comment 1 2022-09-23 15:22:51 PDT
Miguel Salinas
Comment 2 2022-09-23 15:29:40 PDT
Miguel Salinas
Comment 3 2022-09-23 15:33:01 PDT
EWS
Comment 4 2022-09-23 17:02:14 PDT
Committed 254812@main (ba9eae07bb2e): <https://commits.webkit.org/254812@main> Reviewed commits have been landed. Closing PR #4653 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.