[macOS] RunningBoard assertions regress page load time https://bugs.webkit.org/show_bug.cgi?id=245605 rdar://100342604

Reviewed by NOBODY (OOPS!).

Revert 1f756e6601a3cfd67cb7a240fa4ee53e03dbcb98

* Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
(WebKit::AuxiliaryProcessProxy::didFinishLaunching):
(WebKit::AuxiliaryProcessProxy::takeForegroundAssertion): Deleted.
(WebKit::AuxiliaryProcessProxy::dropForegroundAssertion): Deleted.
* Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:
* Source/WebKit/UIProcess/mac/WebProcessProxyMac.mm:
(WebKit::WebProcessProxy::platformSuspendProcess):
(WebKit::WebProcessProxy::platformResumeProcess):